Adding PMCC section to Chapter 3

--- a/main.tex
+++ b/main.tex
@@ -1167,7 +1167,7 @@
 \mainmatter
 % \include{src/sample/chapter}                     %<Insert your chapters here; I recommend to use
 \include{src/sections/chapter2}                     %   \include rather than \input for chapters
-\include{src/sections/chapter}
+\include{src/sections/chapter3}
 %\include{chapter3}% etc.
                                         % Heading commands (in descending order):
                                         % \chapter
