Adding start of chapter 5 and more chapter 3

--- a/main.tex
+++ b/main.tex
@@ -1169,7 +1169,8 @@
 \mainmatter
 % \include{src/sample/chapter}                     %<Insert your chapters here; I recommend to use
 % \include{src/sections/chapter2}                     %   \include rather than \input for chapters
-\include{src/sections/chapter3}
+% \include{src/sections/chapter3}
+\include{src/sections/chapter5}
 %\include{chapter3}% etc.
                                         % Heading commands (in descending order):
                                         % \chapter
@@ -1268,7 +1269,7 @@
                                         %   lines down and checking the output until
                                         %   the TOC headers appear correctly
 
-\input{src/sample/appendix}                       %~Insert your appendices here; I recommend to use
+% \input{src/sample/appendix}                       %~Insert your appendices here; I recommend to use
 %\input{appendix2}                       %   \input rather than \include for appendices.
 %\input{appendix3}% etc.                 %   All heading commands are the same as above,
                                          %   e.g., \chapter, \section, etc.
