--- a/main.bib
+++ b/main.bib
@@ -788,3 +788,47 @@
   number  = {11},
   year    = {2009}
 }
+
+@inproceedings{olson2005lockheed,
+  title={Lockheed Martin 6K/18K Cryocooler},
+  author={Olson, J and Champagne, P and Roth, E and Evtimov, B and Clappier, R and Nast, T and Renna, T and Martin, B},
+  booktitle={Cryocoolers 13},
+  pages={25--30},
+  year={2005},
+  organization={Springer}
+}
+
+@inproceedings{coulter2003nasa,
+  title={{NASA} advanced cyrocooler technology development program},
+  author={Coulter, Daniel R and Ross Jr, Ronald G and Boyle, Robert F and Key, RW},
+  booktitle={IR Space Telescopes and Instruments},
+  volume={4850},
+  pages={1020--1028},
+  year={2003},
+  organization={SPIE}
+}
+
+@innerproceedings{kawamuraterahertz,
+  title={A terahertz superconducting receiver instrumented on a low power space cryocooler},
+  author={Kawamura, Jonathan and Stone, Kristjan and Burton, Lauren and Larson, Melora and Kloosterman, Jenna and Young, Joseph},
+  year={2015},
+  booktitle = {International Symposium on Space Terahertz Technology},
+  organization={NRAO}
+}
+
+@software{reback2020pandas,
+    author       = {The pandas development team},
+    title        = {pandas-dev/pandas: Pandas},
+    month        = feb,
+    year         = 2020,
+    publisher    = {Zenodo},
+    version      = {latest},
+    doi          = {10.5281/zenodo.3509134},
+    url          = {https://doi.org/10.5281/zenodo.3509134}
+}
+
+@manual{mdrive,
+  author = {{intelligent motion systems, inc}},
+  title  = {{MDrive Motor+Driver Motion Control Operating Instructions}},
+  year   = {2003}
+}
