--- a/main.bib
+++ b/main.bib
@@ -832,3 +832,47 @@
   title  = {{MDrive Motor+Driver Motion Control Operating Instructions}},
   year   = {2003}
 }
+
+@inproceedings{mathewson2024customizable,
+  title={A customizable, five-stage, intermediate frequency, low noise amplifier and readout chain for the Astrophysics Stratospheric Telescope for High-spectral Resolution Observations at Submillimeter-wavelengths (ASTHROS)},
+  author={Mathewson, Justin LH and Rodriguez, Ricardo R and Weeks, Eric L and Horton, Paul and Roberson, Cody and Hedges, Madison and Thompson, Christian and Kawamura, Jonathan H and Siles, Jose V and Mani, Hamdi and others},
+  booktitle={Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XII},
+  volume={13102},
+  pages={822--830},
+  year={2024},
+  organization={SPIE}
+}
+
+@manual{renesas,
+  author={{Renesas Electronics Corporation}},
+  title={7-Bit 0.25dB Wideband Digital Step Attenuator},
+  year={2023}
+}
+
+
+@article{mqtt,
+  title={{MQ Telemetry Transport (MQTT)}},
+  author={Stanford-Clark, A and Hunkeler, U},
+  journal={Online. http://mqtt.org. Accessed September},
+  volume={22},
+  pages={2013},
+  year={1999}
+}
+
+@manual{ltc4305,
+  author={{Linear Technology Corporation}},
+  title = {{LTC5305 - 2-Channel, 2-Wire Bus Multiplexer with Capacitance Buffering}},
+  year={2003}
+}
+
+@manual{pca9571,
+  author={{NXP Semiconductors}},
+  title = {{PCA9571 - Remote 8-bit general purpose outputs for 1MHz I2C-bus}},
+  year={2018}
+}
+
+@manual{w5500,
+  author={{WIZnet}},
+  title = {{W5500 Datasheet}},
+  year={2013}
+}
